src/test/deca/syntax/invalid/HelloWorld/Main2-NoCB.deca
// Description:
//    ouverture d'un main sans accolade fermante
//
// Resultats:
//    test_lex OK
//    test_synt donne une erreur ligne 11
// Historique:
//    cree le 06/01/2022

{
